@@ -1,3 +1,10 @@
+2008-03 25  Felipe Reyes  <felipereyes@gmail.com>
+
+	* .gitignore: changed just to test the prepare changelog script
+
+	* prepareChangelog.py: droped the use of git-status to know the
+	files that are waiting for the commit, now use git-diff-index --cached
+
 2006-05-24  Jonathan Gonzalez V.  <zeus@gnu.org>
 
 	* configure.in: Changed the version to 0.0.1-12
